# qllm-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
gui/: Dockerfile  api_client.py  main.py  pyproject.toml
src/: main.py
src/core/: config.py
src/routers/: experiments.py
src/schemas/: job.py  request.py  response.py
src/services/: llm_engine.py
