[tool.poetry]
name = "qllm-gui"
version = "0.1.0"
description = "GUI for QLLM API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = "^1.30.0"
matplotlib = "^3.8.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# [project]
# name = "qllm-gui"
# version = "0.1.0"
# description = ""
# authors = [
#     {name = "Your Name",email = "you@example.com"}
# ]
# requires-python = ">=3.11"
# dependencies = [
#     "streamlit (>=1.56.0,<2.0.0)"
# ]


# [build-system]
# requires = ["poetry-core>=2.0.0,<3.0.0"]
# build-backend = "poetry.core.masonry.api"